feat: add endpoint to get all customer
